Added functionality for Disabling a Document Type Removed Delete possibility on Document Type

--- a/VDMS/Views/DocumentTypes/Details.cshtml
+++ b/VDMS/Views/DocumentTypes/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.Serial)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Disabled)
+        </dd>
+
     </dl>
 </div>
 <p>
