--- a/VDMS/Views/DocumentTypes/Create.cshtml
+++ b/VDMS/Views/DocumentTypes/Create.cshtml
@@ -29,7 +29,17 @@
                 @Html.ValidationMessageFor(model => model.Serial, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @*
+    <div class="form-group">
+        @Html.LabelFor(model => model.Disabled, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Disabled)
+                @Html.ValidationMessageFor(model => model.Disabled, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+        *@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
