--- a/VDMS/Views/DocumentTypes/Delete.cshtml
+++ b/VDMS/Views/DocumentTypes/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.Serial)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Disabled)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
