Removed capability to delete Branches Added capability to disabled Branches

--- a/VDMS/Views/Branches/Delete.cshtml
+++ b/VDMS/Views/Branches/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Disabled)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
