--- a/VDMS/Views/Branches/Details.cshtml
+++ b/VDMS/Views/Branches/Details.cshtml
@@ -26,6 +26,15 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Disabled)
+        </dd>
+
+
     </dl>
 </div>
 <p>
