Fixed report export bug, hide disabled branches and document types when filtering report data

--- a/VDMS/Views/Documents/Reports.cshtml
+++ b/VDMS/Views/Documents/Reports.cshtml
@@ -91,7 +91,7 @@
                 <div class="form-group col-md-5">
                     <input type="submit" name="submit" value="Preview" class="btn btn-default" />
                     &nbsp;  &nbsp;
-                    @Html.ActionLink("Export to Excel", "GetExcel", "Documents", new { @inbound = "All" }, null) @*!!don't delete the null from the ActionLink params*@
+                    <input type="submit" name="submit" value="Export" class="btn btn-default" />
                 </div>
             </div>
 
