--- a/VDMS/Views/Account/Register.cshtml
+++ b/VDMS/Views/Account/Register.cshtml
@@ -14,7 +14,13 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new
+       {
+           @class = "form-control",
+           @placeholder = "firstname.lastname@vodafone.com",
+           @Title = "Input a valid email address"
+       })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
