--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year -Vodafone All rights reserved </p>
+            <p>&copy; @DateTime.Now.Year -Vodafone All rights reserved - Version @ViewContext.Controller.GetType().Assembly.GetName().Version </p>
         </footer>
     </div>
 
