--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 <body>
     <div class="container vdf-header-container">
         <img src="~/logo.png" class="img-responsive vdf-logo" />
-        <span class="vdf-brand-text">Vodafone Outbound Inbound Docs</span>
+        <a href="@Url.Action("Index", "Documents")"><span class="vdf-brand-text">Vodafone Outbound Inbound Docs</span></a>
     </div>
 
     <div class="navbar navbar-inverse ">
