Changed recipient filter in report page to autocomplete drop down

--- a/VDMS/Content/Site.css
+++ b/VDMS/Content/Site.css
@@ -158,7 +158,26 @@ tr:nth-of-type(even) {
   background: #F1F1F1; 
 }
 
+.custom-combobox {
+    position: relative;
+    display: inline-block;
+}
 
+.custom-combobox-toggle {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin-left: -1px;
+    padding: 0;
+    /* support: IE7 */
+    *height: 1.7em;
+    *top: 0.1em;
+}
+
+.custom-combobox-input {
+    margin: 0;
+    padding: 0.3em;
+}
 
 @media screen and (max-width: 497px) {
     .vdf-brand-text{
