--- a/VDMS/Views/Documents/Details.cshtml
+++ b/VDMS/Views/Documents/Details.cshtml
@@ -82,5 +82,5 @@
         @Html.ActionLink("Edit", "Edit", new { id = Model.DocID }) 
     }
      |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Reports")
 </p>
