--- a/VDMS/Views/DocumentTypes/Edit.cshtml
+++ b/VDMS/Views/DocumentTypes/Edit.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Serial, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Serial, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Serial, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                 @Html.ValidationMessageFor(model => model.Serial, "", new { @class = "text-danger" })
             </div>
         </div>
