Feature #67 - Boolean value should be replaced with check-boxes in the grids

--- a/VDMS/Views/Branches/Index.cshtml
+++ b/VDMS/Views/Branches/Index.cshtml
@@ -19,7 +19,10 @@
         gridColumns.Add(grid.Column("Name", "Name"));
         //gridColumns.Add(grid.Column("Name", string.Format("Name {0}", grid.SortColumn == "Name" ? grid.SortDirection == SortDirection.Ascending ? "▼" : "▲" : "")));
         gridColumns.Add(grid.Column("Address", "Address"));
-        gridColumns.Add(grid.Column("Disabled", "Disabled"));
+        gridColumns.Add(grid.Column("Disabled", "Disabled",
+    format:@<text><input class="check-box" id="disabledChkBx" name="disabledChkBx" type="checkbox" value="@item.Disabled" disabled
+    @(item.Disabled == false ? null : "checked") /></text>
+        ));
         gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Details", "Details", new
         {
             id = item.BranchID
