--- a/VDMS/Views/Documents/Reports.cshtml
+++ b/VDMS/Views/Documents/Reports.cshtml
@@ -13,10 +13,13 @@
     gridColumns.Add(grid.Column("Branch.Name", "Branch Name"));
     gridColumns.Add(grid.Column("DocumentType.Name", "Type"));
     gridColumns.Add(grid.Column("UserName", "Created by"));
-    gridColumns.Add(grid.Column("Inbound", "Inbound"));
+    gridColumns.Add(grid.Column("Inbound", "Inbound",
+        format:@<text><input class="check-box" id="inboundChkBx" name="inboundChkBx" type="checkbox" value="@item.Inbound" disabled
+                             @(item.Inbound == false ? null : "checked") /></text>
+        ));
     gridColumns.Add(grid.Column("Recipient", "Recipient"));
     gridColumns.Add(grid.Column("Description", "Description", style: "description"));
-    gridColumns.Add(grid.Column("CreationDate", "Creation Date", format: (item) => item.CreationDate.ToString("d")));
+    gridColumns.Add(grid.Column("CreationDate", "Creation Date", format: (item) => item.CreationDate.ToString("dd-MMM-yyyy")));
     gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Details", "Details", new
     {
         id = item.DocID
@@ -182,7 +185,7 @@
             });
         });
 
-        
+
     </script>
 
 </head>
@@ -191,79 +194,77 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken();
+        <div class="form-horizontal">
+            <hr />
 
-
-                <div class="form-horizontal">
-                    <hr />
-
-                    <div class="form-group">
-                        <div class="form-group col-md-5">
-                            @Html.Label("From", labelText: "From", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBox("StartDate", "", new { @class = "form-control date-picker", @autocomplete = "off" })
-                            </div>
-                        </div>
-
-                        <div class="form-group col-md-5">
-                            @Html.Label("To", labelText: "To", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.TextBox("EndDate", "", new { @class = "form-control date-picker", @autocomplete = "off" })
-                            </div>
-                        </div>
+            <div class="form-group">
+                <div class="form-group col-md-5">
+                    @Html.Label("From", labelText: "From", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBox("StartDate", "", new { @class = "form-control date-picker", @autocomplete = "off" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        <div class="form-group col-md-5">
-                            @Html.LabelFor(model => document.DocTypeID, "Doc Type", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.DropDownList("DocTypeID", null, "Select Document", htmlAttributes: new { @class = "form-control" })
-                                @Html.HiddenFor(model => document.DocTypeID)
-                            </div>
-                        </div>
-                        <div class="form-group col-md-5">
-                            @Html.LabelFor(model => document.BranchID, "BranchID", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.DropDownList("BranchID", null, "Select Branch", htmlAttributes: new { @class = "form-control" })
-                                @Html.HiddenFor(model => document.BranchID)
-                            </div>
-                        </div>
+                <div class="form-group col-md-5">
+                    @Html.Label("To", labelText: "To", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBox("EndDate", "", new { @class = "form-control date-picker", @autocomplete = "off" })
                     </div>
+                </div>
+            </div>
 
-                    <div class="form-group">
-                        <div class="form-group col-md-5">
-                            @Html.Label("Created by", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.DropDownList("UserID", null, "Select Creator", htmlAttributes: new { @class = "form-control" })
-                            </div>
-                        </div>
-
-                        <div class="form-group col-md-5">
-                            @Html.LabelFor(model => document.Recipient, "Recipient", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.DropDownList("Recipient", null, "Select Recipient", htmlAttributes: new { @class = "form-control", id = "combobox" })
-                                @Html.HiddenFor(model => document.Recipient)
-                            </div>
-                        </div>
+            <div class="form-group">
+                <div class="form-group col-md-5">
+                    @Html.LabelFor(model => document.DocTypeID, "Doc Type", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("DocTypeID", null, "Select Document", htmlAttributes: new { @class = "form-control" })
+                        @Html.HiddenFor(model => document.DocTypeID)
                     </div>
-
-                    <div class="form-group">
-                        <div class="form-group col-md-5">
-                            @Html.Label("Origin", htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.RadioButton("Inbound", "Inbound") Inbound
-                                @Html.RadioButton("Inbound", "Outbound") Outbound
-                                @Html.RadioButton("Inbound", "All") All
-
-                                @Html.HiddenFor(model => document.Inbound)
-                            </div>
-                        </div>
-
-                        <div class="form-group col-md-5">
-                            <input type="submit" name="submit" value="Preview" class="btn btn-default" />
-                            &nbsp;  &nbsp;
-                            <input type="submit" name="submit" value="Export" class="btn btn-default" />
-                        </div>
+                </div>
+                <div class="form-group col-md-5">
+                    @Html.LabelFor(model => document.BranchID, "BranchID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("BranchID", null, "Select Branch", htmlAttributes: new { @class = "form-control" })
+                        @Html.HiddenFor(model => document.BranchID)
                     </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="form-group col-md-5">
+                    @Html.Label("Created by", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("UserID", null, "Select Creator", htmlAttributes: new { @class = "form-control" })
+                    </div>
+                </div>
+
+                <div class="form-group col-md-5">
+                    @Html.LabelFor(model => document.Recipient, "Recipient", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("Recipient", null, "Select Recipient", htmlAttributes: new { @class = "form-control", id = "combobox" })
+                        @Html.HiddenFor(model => document.Recipient)
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="form-group col-md-5">
+                    @Html.Label("Origin", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.RadioButton("Inbound", "Inbound") Inbound
+                        @Html.RadioButton("Inbound", "Outbound") Outbound
+                        @Html.RadioButton("Inbound", "All") All
+
+                        @Html.HiddenFor(model => document.Inbound)
+                    </div>
+                </div>
+
+                <div class="form-group col-md-5">
+                    <input type="submit" name="submit" value="Preview" class="btn btn-default" />
+                    &nbsp;  &nbsp;
+                    <input type="submit" name="submit" value="Export" class="btn btn-default" />
+                </div>
+            </div>
 
 
             <br /><br />
@@ -276,5 +277,5 @@
             </div>
 
         </div>
-                }
+    }
 </body>
