Redirect after login to Home page of application

--- a/VDMS/Views/Home/Index.cshtml
+++ b/VDMS/Views/Home/Index.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<h2> Welcome!</h2>
+<br />
+<p>
+    This is Vodafone Inbound Outbound Documents. It is used for tracking documents that are leaving or coming into Vodafone. 
+</p>
+<p>
+    To start click @Html.ActionLink("here", "Reports", "Documents").
+</p>
