Removed Document /Reports page, switched references back to Documents/Index page, changed order of Edit and Delete buttons in grids in all pages

--- a/VDMS/Views/Home/Index.cshtml
+++ b/VDMS/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     This is Vodafone Inbound Outbound Documents. It is used for tracking documents that are leaving or coming into Vodafone. 
 </p>
 <p>
-    To start click @Html.ActionLink("here", "Reports", "Documents").
+    To start click @Html.ActionLink("here", "Index", "Documents").
 </p>
