Updated user management: cancelled user deletion and introduced user enable / disable feature

--- a/VDMS/Views/UsersAdmin/Details.cshtml
+++ b/VDMS/Views/UsersAdmin/Details.cshtml
@@ -16,6 +16,12 @@
         <dd>
             @Html.DisplayFor(model => model.UserName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+        <dd>
+            @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
+        </dd>
     </dl>
 </div>
 <h4>List of roles for this user</h4>
