--- a/VDMS/Views/UsersAdmin/Delete.cshtml
+++ b/VDMS/Views/UsersAdmin/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model VDMS.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>EditUserViewModel</h4>
+    <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -18,6 +18,13 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+        <dd>
+            @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
+        </dd>
 
     </dl>
 
@@ -25,7 +32,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="@ViewBag.Title" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
