--- a/VDMS/Views/UsersAdmin/Edit.cshtml
+++ b/VDMS/Views/UsersAdmin/Edit.cshtml
@@ -10,45 +10,53 @@
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Edit User Form.</h4>
-    <hr />
-    @Html.ValidationSummary(true)
-    @Html.HiddenFor(model => model.Id)
+    <div class="form-horizontal">
+        <h4>Edit User Form.</h4>
+        <hr />
+        @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.Id)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="checkbox">
-            @Html.LabelFor(model => model.EmailConfirmed, new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
-                @Html.CheckBoxFor(m => m.EmailConfirmed, new { @checked = "checked"})
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Email)
             </div>
+        </div>
+        <div class="form-group">
+            <div class="checkbox">
+                @Html.LabelFor(model => model.EmailConfirmed, new { @class = "control-label col-md-2" })
+                <div class="col-md-2">
+                    @Html.CheckBoxFor(m => m.EmailConfirmed, new { @checked = "checked" })
+                </div>
 
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Disabled, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.CheckBoxFor(m => m.Disabled)
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Roles", new { @class = "control-label col-md-2" })
+            <span class=" col-md-10">
+                @foreach (var item in Model.RolesList)
+                {
+                    <input type="radio" name="SelectedRole" value="@item.Value" checked="@item.Selected" class="checkbox-inline" />
+                    @Html.Label(item.Value, new { @class = "control-label" })
+                }
+            </span>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.Label("Roles", new { @class = "control-label col-md-2" })
-        <span class=" col-md-10">
-            @foreach (var item in Model.RolesList)
-            {
-            <input type="radio" name="SelectedRole" value="@item.Value" checked="@item.Selected" class="checkbox-inline" />
-            @Html.Label(item.Value, new { @class = "control-label" })
-            }
-        </span>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
 <div>
