--- a/VDMS/Views/Home/About.cshtml
+++ b/VDMS/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>VOID Application is designed for he numbering of inbound and outbound documents.</p>
