--- a/VDMS/Views/Documents/Create.cshtml
+++ b/VDMS/Views/Documents/Create.cshtml
@@ -12,9 +12,9 @@
     <div class="form-horizontal">
         <h4>Document</h4>
         <hr />
-       
+
         <div class="form-group">
-            @Html.LabelFor(model => model.DocTypeID, "DocTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DocTypeID, "Document Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @using (Html.BeginForm("ComputeSerialNumber", "Documents"))
                 {
@@ -24,14 +24,14 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.BranchID, "BranchID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.BranchID, "Branch", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("BranchID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.BranchID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserID, "User", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserID, new
            {
@@ -78,12 +78,12 @@
                 @Html.EditorFor(model => model.CreationDate, new
            {
                htmlAttributes =
-                                                             new
-                                                             {
-                                                                 @Value = DateTime.Now,
-                                                                 @class = "form-control",
-                                                                 @readonly = "readonly"
-                                                             }
+                            new
+                            {
+                                @Value = DateTime.Now,
+                                @class = "form-control",
+                                @readonly = "readonly"
+                            }
            })
             </div>
         </div>
