Hide Documents Menu to HelpDesk users

--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav">
 
                     <li id="vdf-home">@Html.ActionLink(" ", "Index", "Home")</li>
-                    @if (Request.IsAuthenticated)
+                    @if ((Request.IsAuthenticated) && (!(User.IsInRole("HelpDesk"))))
                     {
                         <li>@Html.ActionLink("Documents", "Index", "Documents")</li>
                     }
