--- a/VDMS/Views/Documents/Delete.cshtml
+++ b/VDMS/Views/Documents/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model VDMS.Models.Document
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
 <div>
     <h4>Document</h4>
     <hr />
@@ -75,13 +75,20 @@
             @Html.DisplayFor(model => model.CreationDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+        <dd>
+            @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="@ViewBag.Title" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
