--- a/VDMS/Views/Documents/Details.cshtml
+++ b/VDMS/Views/Documents/Details.cshtml
@@ -74,6 +74,13 @@
             @Html.DisplayFor(model => model.CreationDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Disabled)
+        </dt>
+        <dd>
+            @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
+        </dd>
+
     </dl>
 </div>
 <p>
