--- a/VDMS/Views/Branches/Index.cshtml
+++ b/VDMS/Views/Branches/Index.cshtml
@@ -11,14 +11,13 @@
 </p>
 
 <body>
+
     @{
-        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent");
+        var grid = new WebGrid(Model, canPage: true, rowsPerPage: 20, selectionFieldName: "selectedRow", ajaxUpdateContainerId: "gridContent", defaultSort: "Name");
         grid.Pager(WebGridPagerModes.NextPrevious);
-        //grid.Column("Name", string.Format("Name {0}", grid.SortColumn == "Name" ? grid.SortDirection == SortDirection.Ascending ? "▼" : "▲" : "")
         var gridColumns = new List<WebGridColumn>();
-        gridColumns.Add(grid.Column("Name", "Name"));
-        //gridColumns.Add(grid.Column("Name", string.Format("Name {0}", grid.SortColumn == "Name" ? grid.SortDirection == SortDirection.Ascending ? "▼" : "▲" : "")));
-        gridColumns.Add(grid.Column("Address", "Address"));
+        gridColumns.Add(grid.Column("Name", @Functions.Sorter("Name", "Name", grid)));
+        gridColumns.Add(grid.Column("Address", @Functions.Sorter("Address", "Address", grid)));
         gridColumns.Add(grid.Column("Disabled", "Disabled",
     format:@<text><input class="check-box" id="disabledChkBx" name="disabledChkBx" type="checkbox" value="@item.Disabled" disabled
                          @(item.Disabled == false ? null : "checked") /></text>
@@ -30,7 +29,7 @@
         if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
         {
             gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { id = item.BranchID })));
-            //gridColumns.Add(grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { id = item.BranchID })));
+            gridColumns.Add(grid.Column(format: (item) => Html.ActionLink((@item.Disabled ? "Enable" : "Disable"), "Delete", new { id = item.BranchID })));
         }
     }
 
