--- a/VDMS/Views/DocumentTypes/Delete.cshtml
+++ b/VDMS/Views/DocumentTypes/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model VDMS.Models.DocumentType
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
 <div>
    <hr />
     <dl class="dl-horizontal">
@@ -29,9 +29,8 @@
         <dt>
             @Html.DisplayNameFor(model => model.Disabled)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.Disabled)
+            @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
         </dd>
 
     </dl>
@@ -40,7 +39,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="@ViewBag.Title" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
