--- a/VDMS/Views/UsersAdmin/Delete.cshtml
+++ b/VDMS/Views/UsersAdmin/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
 <div>
     <h4>User</h4>
     <hr />
