--- a/VDMS/Views/Documents/Delete.cshtml
+++ b/VDMS/Views/Documents/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2>Are you sure you want to @ViewBag.Title.ToLower() this document?</h2>
 
-<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
 <div>
-    <h4>Document</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
