--- a/VDMS/Views/Documents/Details.cshtml
+++ b/VDMS/Views/Documents/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Document Details</h2>
 
 <div>
-    <h4>Document</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
