--- a/VDMS/Views/Branches/Details.cshtml
+++ b/VDMS/Views/Branches/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Branch Details</h2>
 
 <div>
-    <h4>Branch</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
