--- a/VDMS/Views/DocumentTypes/Delete.cshtml
+++ b/VDMS/Views/DocumentTypes/Delete.cshtml
@@ -4,9 +4,7 @@
     ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>@ViewBag.Title</h2>
-
-<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
+<h2>Are you sure you want to @ViewBag.Title.ToLower() this document type?</h2>
 <div>
    <hr />
     <dl class="dl-horizontal">
