--- a/VDMS/Views/Roles/Delete.cshtml
+++ b/VDMS/Views/Roles/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Delete";
     }
 
-    <h2>Delete</h2>
-
-    <h3>Are you sure you want to delete this?</h3>
+    <h2>Are you sure you want to delete this role?</h2>
     <div>
-        <h4>Role</h4>
+        
         <hr />
         <dl class="dl-horizontal">
             <dt>
