Modified page headers to be on one row ... again

--- a/VDMS/Views/UsersAdmin/Delete.cshtml
+++ b/VDMS/Views/UsersAdmin/Delete.cshtml
@@ -4,9 +4,7 @@
     ViewBag.Title = Model.Disabled ? "Enable" : "Disable";
 }
 
-<h2>@ViewBag.Title</h2>
-
-<h3>Are you sure you want to @ViewBag.Title.ToLower() this?</h3>
+<h2>Are you sure you want to @ViewBag.Title.ToLower() this user?</h2>
 <div>
     <h4>User</h4>
     <hr />
