--- a/VDMS/Views/DocumentTypes/Delete.cshtml
+++ b/VDMS/Views/DocumentTypes/Delete.cshtml
@@ -36,8 +36,11 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="@ViewBag.Title" class="btn btn-default" />
+        </div>
+
         <div class="form-actions no-color">
-            <input type="submit" value="@ViewBag.Title" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
