--- a/VDMS/Views/UsersAdmin/Delete.cshtml
+++ b/VDMS/Views/UsersAdmin/Delete.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Are you sure you want to @ViewBag.Title.ToLower() this user?</h2>
 <div>
-    <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,8 +28,11 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="@ViewBag.Title" class="btn btn-default" />
+        </div>
+
         <div class="form-actions no-color">
-            <input type="submit" value="@ViewBag.Title" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
