--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -11,11 +11,12 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <!-- jQuery UI CSS Reference -->
-    @*  <link href="@Url.Content("~/Content/themes/base/minified/jquery-ui.min.css")" rel="stylesheet" />*@
-    <link href="@Url.Content("~/Content/themes/base/all.css")" rel="stylesheet" />
+    @*
+    <link href="@Url.Content(" ~/Content/themes/base/minified/jquery-ui.min.css")" rel="stylesheet" />*@
+    <link href="@Url.Content(" ~/Content/themes/base/all.css")" rel="stylesheet" />
     <!-- Required jQuery and jQuery UI Javascript references -->
-    <script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui-1.11.4.min.js")"></script>
+    <script src="@Url.Content(" ~/Scripts/jquery-1.10.2.min.js")"></script>
+    <script src="@Url.Content(" ~/Scripts/jquery-ui-1.11.4.min.js")"></script>
 
 
 
@@ -23,7 +24,7 @@
 <body>
     <div class="container vdf-header-container">
         <img src="~/logo.png" class="img-responsive vdf-logo" />
-        <a href="@Url.Action("Index", "Home")"><span class="vdf-brand-text">Vodafone Outbound Inbound Docs</span></a>
+        <a href="@Url.Action(" Index", "Home" )"><span class="vdf-brand-text">Vodafone Outbound Inbound Docs</span></a>
     </div>
 
     <div class="navbar navbar-inverse ">
@@ -42,20 +43,25 @@
                     <li id="vdf-home">@Html.ActionLink(" ", "Index", "Home")</li>
                     @if ((Request.IsAuthenticated) && (!(User.IsInRole("HelpDesk"))))
                     {
-                        <li>@Html.ActionLink("Documents", "Index", "Documents")</li>
+                    <li>@Html.ActionLink("Documents", "Index", "Documents")</li>
                     }
                     @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
                     {
-                        <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
+                    <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
                     }
                     @if (Request.IsAuthenticated && User.IsInRole("MBB Developer"))
                     {
-                        <li>@Html.ActionLink("Roles Management", "Index", "RolesAdmin")</li>
+                    <li>@Html.ActionLink("Roles Management", "Index", "RolesAdmin")</li>
                     }
                     @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
                     {
-                        <li>@Html.ActionLink("Branches", "Index", "Branches")</li>
-                        <li>@Html.ActionLink("Document Types", "Index", "DocumentTypes")</li>
+                    <li>@Html.ActionLink("Branches", "Index", "Branches")</li>
+                    <li>@Html.ActionLink("Document Types", "Index", "DocumentTypes")</li>
+                    }
+                    @if (User.IsInRole("MBB Developer"))
+                    {
+                    <li>@Html.ActionLink("Docs Log", "Index","DocumentLogs")</li>
+                    <li>@Html.ActionLink("Users Log", "Index","UserLogs")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
