--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -257,7 +257,7 @@
             <div class="form-group">
                 <div class="form-group col-md-5">
                     @Html.Label("Origin", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-10" id="vdf-radio">
                         @Html.RadioButton("Inbound", "Inbound") Inbound
                         @Html.RadioButton("Inbound", "Outbound") Outbound
                         @Html.RadioButton("Inbound", "All", true) All
