--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -172,9 +172,9 @@
                     this.input
                       .val("")
                     this.element.val("");
-                    this._delay(function () {
-                        this.input.tooltip("close").attr("title", "");
-                    }, 2500);
+                    //this._delay(function () {
+                    //    this.input.tooltip("close").attr("title", "");
+                    //}, 2500);
                     this.input.data("ui-autocomplete").term = "";
                 },
 
