Fix: Document logs - display serial number instead of ID

--- a/VDMS/Views/DocumentLogs/Index.cshtml
+++ b/VDMS/Views/DocumentLogs/Index.cshtml
@@ -8,7 +8,7 @@
     var gridColumns = new List<WebGridColumn>
         ();
         gridColumns.Add(grid.Column("UserName", "Username"));
-        gridColumns.Add(grid.Column("DocID", "ID Doc"));
+        gridColumns.Add(grid.Column("DocSerial", "Document"));
         gridColumns.Add(grid.Column("OperationType","OperationType"));
         gridColumns.Add(grid.Column("LogDate","LogDate"));
         }
