--- a/VDMS/Views/UsersAdmin/Edit.cshtml
+++ b/VDMS/Views/UsersAdmin/Edit.cshtml
@@ -26,7 +26,7 @@
             <div class="checkbox">
                 @Html.LabelFor(model => model.EmailConfirmed, new { @class = "control-label col-md-2" })
                 <div class="col-md-2">
-                    @Html.CheckBoxFor(m => m.EmailConfirmed, new { @checked = "checked" })
+                    @Html.CheckBoxFor(m => m.EmailConfirmed, new { @checked = "checked" , @id = "vdf-check" })
                 </div>
 
             </div>
