--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -49,11 +49,11 @@
                     {
                     <li>@Html.ActionLink("User Management", "Index", "UsersAdmin")</li>
                     }
-                    @if (Request.IsAuthenticated && User.IsInRole("MBB Developer"))
+                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
                     {
                     <li>@Html.ActionLink("Roles Management", "Index", "RolesAdmin")</li>
                     }
-                    @if ((Request.IsAuthenticated) && (User.IsInRole("HelpDesk") || (User.IsInRole("MBB Developer"))))
+                    @if ((Request.IsAuthenticated) && (User.IsInRole("Admin") || (User.IsInRole("MBB Developer"))))
                     {
                     <li>@Html.ActionLink("Branches", "Index", "Branches")</li>
                     <li>@Html.ActionLink("Document Types", "Index", "DocumentTypes")</li>
